<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/NameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/Setup_Field"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/Setup_Name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/EditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:ems="10" >

                <requestFocus />
            </EditText>



            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/ConnectionType"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <Spinner
                android:id="@+id/SecuritySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp" />

            <TextView
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/Username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:ems="10" />

            <TextView
                android:id="@+id/Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/Password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/Pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/host_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/Setup_IP"
                android:textColor="@color/textColor"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:ems="10" />
                        
            <Button
                android:id="@+id/Tutorial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:onClick="resetTutorial"
                    android:text="@string/Tutorial" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/breadcrumbs_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Enable Breadcrumbs"
                android:onClick="toggleBreadcrumbs" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/UploadSelected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="150dp"
                    android:onClick="Save"
                    android:text="@string/Setup_Save" />

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="30dp"
                    android:onClick="GoToMain"
                    android:text="@string/Setup_Cancel" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>