<?xml version="1.0" encoding="utf-8"?>
		
   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       	xmlns:tools="http://schemas.android.com/tools"
       	android:id="@+id/scrollView1"
       	android:layout_width="match_parent"
		android:layout_height="match_parent"
      	android:fillViewport="true">
		    
		<LinearLayout 
		    android:id="@+id/LL"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:padding="16dp"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/mainText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:paddingBottom="20dp"
		        android:textColor="@color/textColor"
		        android:text="@string/LoadText"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <LinearLayout
		        android:id="@+id/HL"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal">
		
		        <Button
		            android:id="@+id/UploadSelected"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
					android:layout_weight="1"
		            android:text="Upload" />
		
		        <Button
		            android:id="@+id/Edit"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
					android:layout_weight="1"
		            android:text="@string/Edit" />
		
		        <Button
		            android:id="@+id/delete"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
					android:layout_weight="1"
		            android:text="@string/Delete" />
		
		        <!--<Button
		            android:id="@+id/Back"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:onClick="Back"
		            android:text="@string/Back" />-->
		
		    </LinearLayout>
		
		</LinearLayout>
</ScrollView>
