<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.IntelligentWaves.xmltest.MainActivity$PlaceholderFragment" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >

            <!--<TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/textColor"
                android:textSize="25dp"
                android:text="Submit Spot report:" />-->

            <TextView
                android:id="@+id/ImageUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Image:" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/Image"
                android:src="@android:drawable/gallery_thumb"/>
                
            <TextView
                android:id="@+id/FileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/FileName" />

            <EditText
                android:id="@+id/FileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint=""
                android:ems="10" />

            <TextView
                android:id="@+id/NameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:hint=""
                android:maxLength="200" />

            <TextView
                android:id="@+id/TimeOfReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TimeOfReport" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/TimeOfReportET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="time" />

                <ImageButton
                    android:id="@+id/TimeOfReportIB"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/Time"
                    android:src="@android:drawable/ic_menu_recent_history" />

            </LinearLayout>

            <TextView
                android:id="@+id/TimeObserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TimeObserved" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/TimeObservedET"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:inputType="time" />


                <ImageButton
                    android:id="@+id/TimeObservedIB"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_menu_recent_history"
                    android:contentDescription="@string/Time" />

            </LinearLayout>

            <TextView
                android:id="@+id/TimeZoneText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TimeZone" />

            <Spinner
                android:id="@+id/TimeZoneSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/Coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/Coordinates" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Coordinates"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:hint=""
                    android:ems="10" />

                <ImageButton
                    android:id="@+id/gps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="Get GPS Location"
                    android:src="@android:drawable/ic_menu_mylocation"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_marginBottom="25dp">

                <Button
                    android:id="@+id/LatLongButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Convert to Lat/Long" />

                <Button
                    android:id="@+id/MGRSButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Convert to MGRS" />

                <Button
                    android:id="@+id/UTMButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Convert to UTM" />
            
            </LinearLayout>

            <TextView
                android:id="@+id/TypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TypeText" />
            
            <Spinner
                android:id="@+id/TypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/AdditionalNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/AdditionalNotes" />

            <EditText
                android:id="@+id/Notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/UploadText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Upload Type:" />

            <Spinner
                android:id="@+id/UploadSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="25dp"/>

            <Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save for later" />

            <Button
                android:id="@+id/UploadSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Submit" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>