<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.IntelligentWaves.xmltest.update_report">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/Name" />

            <TextView
                android:id="@+id/name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:text="@string/Name" />

            <TextView
                android:id="@+id/TimeObserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TimeObserved" />

            <TextView
                android:id="@+id/to_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/TimeOofReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/TimeObserved" />

            <TextView
                android:id="@+id/tor_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/Coords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/Coordinates" />

            <TextView
                android:id="@+id/coords_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Quick Synopsis:" />

            <TextView
                android:id="@+id/synopsis_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:text="@string/Name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Full Report:" />

            <TextView
                android:id="@+id/fullReport_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="25dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/textColor"
                android:text="@string/Name" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
